--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "twitch-points-autoclicker",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "puppeteer-core": "^8.0.0",
+    "puppeteer": "^15.1.1",
     "readline-sync": "^1.4.10"
   }
 }
